--- a/src/components/GridContainer/style.css
+++ b/src/components/GridContainer/style.css
@@ -1,5 +1,13 @@
-.grid-container{
+.grid-container {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
+}
+
+@media screen and (max-width:1000px) {
+    .grid-container {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
 }
