--- a/src/components/MyAlert/style.css
+++ b/src/components/MyAlert/style.css
@@ -21,3 +21,9 @@
     opacity: 1;
     transform: scale(1.05);
 }
+
+@media screen and (max-width: 1000px) {
+    .alert {
+        width: 90%;
+    }
+}
