--- a/src/pages/Home/style.css
+++ b/src/pages/Home/style.css
@@ -15,3 +15,10 @@
     grid-template-columns: 2fr 3fr 2fr;
     gap: 25px;
 }
+
+@media screen and (max-width:1000px) {
+
+    .home .bottom {
+        grid-template-columns: 1fr;
+    }
+}
