--- a/src/components/PasswordStrengthBar/style.css
+++ b/src/components/PasswordStrengthBar/style.css
@@ -9,7 +9,7 @@
     height: 5px;
     width: 60%;
     border-radius: 4px;
-    background-color: #FFC107;
+    background-color: var(--);
     transition: 0.3s all ease-in-out;
 }
 
