add navigate functionalty

--- a/src/pages/UserDetails/UserDetailsPage/style.css
+++ b/src/pages/UserDetails/UserDetailsPage/style.css
@@ -1,4 +1,4 @@
-.user_details{
+.user_details {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,7 +7,7 @@
     gap: 15px;
 }
 
-.delete_user{
+.delete_user {
     font-size: 28px;
     background-color: #A22;
     color: #fff;
@@ -17,10 +17,18 @@
     padding: 7px 14px;
     cursor: pointer;
     transition: 0.3s all ease-in-out;
+    margin-left: 10px;
 }
 
-
-.user_details .delete_user:hover{
+.user_details .delete_user:hover {
     background-color: #A00;
     padding: 7px 30px;
+}
+
+.delete_user.back {
+    background-color: #22A;
+}
+
+.delete_user.back:hover {
+    background-color: #00A;
 }
